--- a/index.html
+++ b/index.html
@@ -104,14 +104,15 @@ layout: default
         </div>
     </div>
 </div>
-<div class="shop_section">
-    <div class="container">
-        <h2 class="h2_shop_section" style="margin-top: 50px; margin-bottom: 10px;">{{document.fragments.shop_heading.html | markdownify | remove: '<p>' | remove: '</p>'}}</h2>
-        <a rel="noopener noreferrer" href="{{document.fragments.shop_link.url}}">
-            <img src="{{ document.fragments.shop_image.url }}" alt="Shop!" width="50%" style="margin-bottom: 30px;">
-        </a>
+<div class="volunteers_big">
+    <div class="volunteers_text" style="position: absolute; margin-top: 200px;">
+	<p>Nous ouvrirons les inscriptions pour les bénévoles en 2019.</p>
     </div>
-</div>
+    <img width="100%" src="/images/home/Benevoles_half.png">
+</div>	
+<div class="volunteers_small">
+    <img width="100%" src="/images/home/Benevoles.png">
+</div>	
 <div class="newsletter_cta">
     <div class="container flex vcenter fade-in-module">
         <div class="newsletter-text">
