--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ layout: default
 </div>
 <div class="volunteers_big">
     <div class="volunteers_text" style="position: absolute; margin-top: 200px;">
-	<p>Nous ouvrirons les inscriptions pour les bénévoles en 2019.</p>
+	<p>{{ index_data.volunteers_txt }}</p>
     </div>
     <img width="100%" src="/images/home/Benevoles_half.png">
 </div>	
