--- a/index.html
+++ b/index.html
@@ -106,11 +106,14 @@ layout: default
 </div>
 <div class="volunteers_big">
     <div class="volunteers_text" style="position: absolute; margin-top: 200px;">
-	<p>{{ index_data.volunteers_txt }}</p>
+	<p style="font-weight: bold;">{{ index_data.volunteers_txt }}</p>
     </div>
     <img width="100%" src="/images/home/Benevoles_half.png">
 </div>	
 <div class="volunteers_small">
+    <div class="volunteers_text_small" style="position: absolute; margin-top: 200px;">
+	<p style="font-weight: bold;">{{ index_data.volunteers_txt }}</p>
+    </div>
     <img width="100%" src="/images/home/Benevoles.png">
 </div>	
 <div class="newsletter_cta">
