--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ layout: default
 </div>
 <div class="volunteers_big">
     <div class="volunteers_text" style="position: absolute; margin-top: 200px;">
-	<p style="font-weight: bold;">{{ index_data.volunteers_txt }}</p>
+	<p style="font-weight: bold;">{{ document.fragments.volunteers_text.text }}</p>
     </div>
     <img width="100%" src="/images/home/Benevoles_half.png">
 </div>	
