--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@ layout: default
     </div>
 </div>
 <div class="volunteers_big">
-    <div class="volunteers_text" style="position: absolute; margin-top: 200px;">
+    <div class="volunteers_text" style="position: absolute; margin-top: 10vw;">
 	<p style="font-weight: bold;">{{ document.fragments.volunteers_text.text }}</p>
     </div>
     <img width="100%" src="/images/home/Benevoles_half.png">
 </div>	
 <div class="volunteers_small">
-    <div class="volunteers_text_small" style="position: absolute; margin-top: 200px;">
-	<p style="font-weight: bold;">{{ index_data.volunteers_txt }}</p>
+    <div class="volunteers_text_small" style="position: absolute; margin-top: 15vw;">
+	<p style="font-weight: bold;">{{ document.fragments.volunteers_text.text }}</p>
     </div>
     <img width="100%" src="/images/home/Benevoles.png">
 </div>	
