--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@ layout: default
         </div>
     </div>
 </div>
-<div class="volunteers_big">
-    <div class="volunteers_text" style="position: absolute; margin-top: 10vw;">
+<div class="volunteers_big" style="text-align: center;">
+    <div class="volunteers_text" style="position: absolute; margin-top: 10vw; text-align: center;">
 	<p style="font-weight: bold;">{{ document.fragments.volunteers_text.text }}</p>
     </div>
     <img width="100%" src="/images/home/Benevoles_half.png">
 </div>	
-<div class="volunteers_small">
-    <div class="volunteers_text_small" style="position: absolute; margin-top: 15vw;">
+<div class="volunteers_small" style="text-align: center;">
+    <div class="volunteers_text_small" style="position: absolute; margin-top: 15vw; text-align: center;">
 	<p style="font-weight: bold;">{{ document.fragments.volunteers_text.text }}</p>
     </div>
     <img width="100%" src="/images/home/Benevoles.png">
