--- a/media.html
+++ b/media.html
@@ -1,18 +1,14 @@
 ---
 layout: default
 ---
-{% assign about_data = site.data[site.lang].pages.about %}
-{% assign document = site.prismicData.single.page_about%}
+{% assign about_data = site.data[site.lang].pages.media %}
+{% assign document = site.prismicData.single.page_media%}
 <div class="about_yog about_yog_1 ">
   <div class="container fade-in-module">
-    <h1>{{ document.fragments.section_1_title.text }}</h1>
+    <h1>test</h1>
     <div class="about-content flex vcenter">
-      <div class="about-text">
-        <img src="{{ document.fragments.section_1_image.url }}" alt="{{ document.fragments.section_1_image.alt }}">
-      </div>
       <div class="about-image">
-        {{ document.fragments.section_1_content.html }}
-        <div class="about-more-button"><a class="about-more-btn" target="_blank" rel="noopener noreferrer" href="{{ document.fragments.section_1_link_more.url }}">{{ document.fragments.section_1_link_more_text.text }}</a></div>
+        test
       </div>
     </div>
   </div>
