--- a/media.html
+++ b/media.html
@@ -5,7 +5,7 @@ layout: default
 {% assign document = site.prismicData.single.page_media%}
 <div class="about_yog about_yog_1 ">
   <div class="container fade-in-module">
-    <h1>test</h1>
+    <h1>{{ document.fragments.media_title }}</h1>
     <div class="about-content flex vcenter">
       <div class="about-image">
         test
