--- a/media.html
+++ b/media.html
@@ -5,10 +5,14 @@ layout: default
 {% assign document = site.prismicData.single.page_media%}
 <div class="about_yog about_yog_1 ">
   <div class="container fade-in-module">
-    <h1>{{ document.fragments.media_title.text }}</h1>
+    <h1>Médias</h1>
+    <h2>Communiqués de presse</h2>
     <div class="about-content flex vcenter">
       <div class="about-image">
-        test
+        asdf<br>
+        asdf<br>
+        asdf<br>
+        asdf
       </div>
     </div>
   </div>
