--- a/media.html
+++ b/media.html
@@ -15,5 +15,14 @@ layout: default
         asdf
       </div>
     </div>
+    <h2>Newsletter</h2>
+    <div class="about-content flex vcenter">
+      <div class="about-image">
+        asdf<br>
+        asdf<br>
+        asdf<br>
+        asdf
+      </div>
+    </div>
   </div>
 </div>
