--- a/medias.html
+++ b/medias.html
@@ -6,23 +6,30 @@ layout: default
 <div class="about_yog about_yog_1 ">
   <div class="container fade-in-module">
     <h1>Médias</h1>
-    <h2>Communiqués de presse</h2>
-    <div class="about-content flex vcenter">
-      <div class="about-image">
-        asdf<br>
-        asdf<br>
-        asdf<br>
-        asdf
+    <div class="col-md-6">
+      <h2>Communiqués de presse</h2>
+      <div class="about-content flex vcenter">
+        <div class="about-image">
+          asdf<br>
+          asdf<br>
+          asdf<br>
+          asdf
+        </div>
+      </div>
+      <h2>Newsletter</h2>
+      <div class="about-content flex vcenter">
+        <div class="about-image">
+          asdf<br>
+          asdf<br>
+          asdf<br>
+          asdf
+        </div>
       </div>
     </div>
-    <h2>Newsletter</h2>
-    <div class="about-content flex vcenter">
-      <div class="about-image">
-        asdf<br>
-        asdf<br>
-        asdf<br>
-        asdf
-      </div>
+    <div class="col-md-6">
+      contact
+      asdf
+      asdf
     </div>
   </div>
 </div>
