--- a/medias.html
+++ b/medias.html
@@ -16,11 +16,11 @@ layout: default
       <h2>Newsletter</h2>
       <div class="about-content flex vcenter">
         <div class="about-image">
-          <a href="https://mailchi.mp/lausanne2020.com/newsletter-lausanne-2020-mai-2018"> Mai 2018 </a>
-          <a href="https://mailchi.mp/e25abb6e9019/2-years-to-go-avant-lausanne-2020-9-janvier-2018-16h30-au-flon"> Janvier 2018 - 2 years to go!</a>
-          <a href="https://mailchi.mp/1bf8b6c9710b/newsletter-lausanne-2020-novembre-2017"> Novembre 2017 </a>
-          <a href="https://mailchi.mp/90f4d72d377d/lausanne2020-newsletter-septembre-2017"> Septembre 2017 </a>
-          <a href="https://mailchi.mp/d1078c26c261/lausanne-2020-newsletter-8-juin-2017"> Juin 2017 </a>
+          <a href="https://mailchi.mp/lausanne2020.com/newsletter-lausanne-2020-mai-2018"> Mai 2018 </a><br>
+          <a href="https://mailchi.mp/e25abb6e9019/2-years-to-go-avant-lausanne-2020-9-janvier-2018-16h30-au-flon"> Janvier 2018 - 2 years to go!</a><br>
+          <a href="https://mailchi.mp/1bf8b6c9710b/newsletter-lausanne-2020-novembre-2017"> Novembre 2017 </a><br>
+          <a href="https://mailchi.mp/90f4d72d377d/lausanne2020-newsletter-septembre-2017"> Septembre 2017 </a><br>
+          <a href="https://mailchi.mp/d1078c26c261/lausanne-2020-newsletter-8-juin-2017"> Juin 2017 </a><br>
         </div>
       </div>
     </div>
