--- a/medias.html
+++ b/medias.html
@@ -9,7 +9,7 @@ layout: default
     <div class="medias col-md-9">
       <h2>Communiqués de presse</h2>
       <div class="prelease">
-        <a href="./images/home/Lausanne2020.CP.09.04.2018._FR.pdf">09.04.2018 : Lausanne 2020 en avance sur son calendrier</a><br>
+        <a href="/images/home/Lausanne2020.CP.09.04.2018._FR.pdf">09.04.2018 : Lausanne 2020 en avance sur son calendrier</a><br>
       </div>
       <h2>Newsletter</h2>
       <div class="newsl">
