--- a/medias.html
+++ b/medias.html
@@ -9,15 +9,15 @@ layout: default
     <div class="medias col-md-9">
       <h2>Communiqués de presse</h2>
       <div class="prelease">
-        <a href="/images/home/Lausanne2020.CP.09.04.2018._FR.pdf">09.04.2018 : Lausanne 2020 en avance sur son calendrier</a><br>
+        <a href="/images/home/Lausanne2020.CP.09.04.2018._FR.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 en avance sur son calendrier</a><br>
       </div>
       <h2>Newsletter</h2>
       <div class="newsl">
-        <a href="https://mailchi.mp/lausanne2020.com/newsletter-lausanne-2020-mai-2018"> Mai 2018 </a><br>
-        <a href="https://mailchi.mp/e25abb6e9019/2-years-to-go-avant-lausanne-2020-9-janvier-2018-16h30-au-flon"> Janvier 2018 - 2 years to go!</a><br>
-        <a href="https://mailchi.mp/1bf8b6c9710b/newsletter-lausanne-2020-novembre-2017"> Novembre 2017 </a><br>
-        <a href="https://mailchi.mp/90f4d72d377d/lausanne2020-newsletter-septembre-2017"> Septembre 2017 </a><br>
-        <a href="https://mailchi.mp/d1078c26c261/lausanne-2020-newsletter-8-juin-2017"> Juin 2017 </a><br>
+        <a href="https://mailchi.mp/lausanne2020.com/newsletter-lausanne-2020-mai-2018" target="_blank" rel="noopener"> Mai 2018 </a><br>
+        <a href="https://mailchi.mp/e25abb6e9019/2-years-to-go-avant-lausanne-2020-9-janvier-2018-16h30-au-flon" target="_blank" rel="noopener"> Janvier 2018 - 2 years to go!</a><br>
+        <a href="https://mailchi.mp/1bf8b6c9710b/newsletter-lausanne-2020-novembre-2017" target="_blank" rel="noopener"> Novembre 2017 </a><br>
+        <a href="https://mailchi.mp/90f4d72d377d/lausanne2020-newsletter-septembre-2017" target="_blank" rel="noopener"> Septembre 2017 </a><br>
+        <a href="https://mailchi.mp/d1078c26c261/lausanne-2020-newsletter-8-juin-2017" target="_blank" rel="noopener"> Juin 2017 </a><br>
       </div>
     </div>
     <div class="col-md-3">
