--- a/medias.html
+++ b/medias.html
@@ -22,7 +22,8 @@ layout: default
     </div>
     <div class="col-md-3">
       <div class="contactInfos">
-        contact
+        <h2>Contact presse :</h2>
+        @ : press(at)lausanne2020(dot)com
       </div>
     </div>
   </div>
