--- a/medias.html
+++ b/medias.html
@@ -6,7 +6,7 @@ layout: default
 <div class="about_yog about_yog_1 ">
   <div class="container fade-in-module">
     <h1>Médias</h1>
-    <div class="medias col-md-9">
+    <div class="medias col-md-8 col-sm-12">
       <h2>Communiqués de presse</h2>
       <div class="prelease">
         <a href="/images/home/Lausanne2020.CP.09.04.2018._FR.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 en avance sur son calendrier</a><br>
@@ -20,7 +20,7 @@ layout: default
         <a href="https://mailchi.mp/d1078c26c261/lausanne-2020-newsletter-8-juin-2017" target="_blank" rel="noopener"> Juin 2017 </a><br>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4 col-sm-12">
       <div class="contactInfos">
         <h2>Contact presse :</h2>
         @ : press(at)lausanne2020(dot)com
