--- a/medias.html
+++ b/medias.html
@@ -7,23 +7,68 @@ layout: default
   <div class="container fade-in-module">
     <h1>Médias</h1>
     <div class="medias col-md-8 col-sm-12">
-      <h2>Communiqués de presse</h2>
+      {% if site.lang == "fr-fr" %}
+        <h2>Communiqués de presse</h2>
+      {% endif %}
+      {% if site.lang == "de-de" %}
+        <h2>Medienmitteilung</h2>
+      {% endif %}
+      {% if site.lang == "en-gb" %}
+        <h2>Press release</h2>
+      {% endif %}
       <div class="prelease">
-        <a href="/images/home/Lausanne2020.CP.09.04.2018._FR.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 en avance sur son calendrier</a><br>
+        {% if site.lang == "fr-fr" %}
+          <a href="/images/home/Lausanne2020.CP.09.04.2018._FR.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 en avance sur son calendrier</a><br>
+          <a href="/images/home/Lausanne2020_Pressrelease_131stIOCSession_Lima_2017-13-09_FR.pdf" target="_blank" rel="noopener">13.09.2017 : Lausanne 2020 - "Nos promesses deviennent réalité"</a><br>
+        {% endif %}
+        {% if site.lang == "de-de" %}
+          <a href="/images/home/Lausanne2020.CP.09.04.2018._ALL.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 liegt dem Zeitplan voraus</a><br>
+        {% endif %}
+        {% if site.lang == "en-gb" %}
+          <a href="/images/home/Lausanne2020.CP.09.04.2018._FR.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 en avance sur son calendrier</a><br>
+          <a href="/images/home/Lausanne2020.CP.09.04.2018._ALL.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 liegt dem Zeitplan voraus</a><br>
+          <a href="/images/home/Lausanne2020_Pressrelease_131stIOCSession_Lima_2017-13-09_ENG.pdf" target="_blank" rel="noopener">13.09.2017 : Lausanne 2020 - "Our promise becomes reality"</a><br>
+        {% endif %}
       </div>
       <h2>Newsletter</h2>
       <div class="newsl">
-        <a href="https://mailchi.mp/lausanne2020.com/newsletter-lausanne-2020-mai-2018" target="_blank" rel="noopener"> Mai 2018 </a><br>
-        <a href="https://mailchi.mp/e25abb6e9019/2-years-to-go-avant-lausanne-2020-9-janvier-2018-16h30-au-flon" target="_blank" rel="noopener"> Janvier 2018 - 2 years to go!</a><br>
-        <a href="https://mailchi.mp/1bf8b6c9710b/newsletter-lausanne-2020-novembre-2017" target="_blank" rel="noopener"> Novembre 2017 </a><br>
-        <a href="https://mailchi.mp/90f4d72d377d/lausanne2020-newsletter-septembre-2017" target="_blank" rel="noopener"> Septembre 2017 </a><br>
-        <a href="https://mailchi.mp/d1078c26c261/lausanne-2020-newsletter-8-juin-2017" target="_blank" rel="noopener"> Juin 2017 </a><br>
+        {% if site.lang == "fr-fr" %}
+          <a href="https://mailchi.mp/lausanne2020.com/newsletter-lausanne-2020-mai-2018" target="_blank" rel="noopener"> Mai 2018 </a><br>
+          <a href="https://mailchi.mp/e25abb6e9019/2-years-to-go-avant-lausanne-2020-9-janvier-2018-16h30-au-flon" target="_blank" rel="noopener"> Janvier 2018 - 2 years to go!</a><br>
+          <a href="https://mailchi.mp/1bf8b6c9710b/newsletter-lausanne-2020-novembre-2017" target="_blank" rel="noopener"> Novembre 2017 </a><br>
+          <a href="https://mailchi.mp/90f4d72d377d/lausanne2020-newsletter-septembre-2017" target="_blank" rel="noopener"> Septembre 2017 </a><br>
+          <a href="https://mailchi.mp/d1078c26c261/lausanne-2020-newsletter-8-juin-2017" target="_blank" rel="noopener"> Juin 2017 </a><br>
+        {% endif %}
+        {% if site.lang == "de-de" %}
+          <a href="https://mailchi.mp/aa7583286711/2-years-to-go-lausanne-343573" target="_blank" rel="noopener"> Januar 2018 - 2 years to go! </a><br>
+          <a href="https://mailchi.mp/67cb2c2f037b/newsletter-lausanne-2020-novembre-309253" target="_blank" rel="noopener"> November 2017 </a><br>
+          <a href="https://mailchi.mp/d7acb3aac5db/lausanne2020-newsletter-september-2017" target="_blank" rel="noopener"> September 2017 </a><br>
+          <a href="https://mailchi.mp/1b14eb75cf7e/lausanne-2020-newsletter-8-juni-2017" target="_blank" rel="noopener"> Juni 2017 </a><br>
+        {% endif %}
+        {% if site.lang == "en-gb" %}
+          <a href="https://mailchi.mp/lausanne2020.com/newsletter-lausanne-2020-may-2018" target="_blank" rel="noopener"> May 2018 </a><br>
+          <a href="https://mailchi.mp/328125f26fc6/2-years-to-go-lausanne-343577" target="_blank" rel="noopener"> January 2018 - 2 years to go!</a><br>
+          <a href="https://mailchi.mp/4db957d0b109/newsletter-lausanne-2020-novembre-309257" target="_blank" rel="noopener"> November 2017 </a><br>
+          <a href="https://mailchi.mp/8617ce2ff6b1/lausanne2020-newsletter-september-2017" target="_blank" rel="noopener"> September 2017 </a><br>
+          <a href="https://mailchi.mp/dbb49f557e54/lausanne-2020-newsletter-8-june-2017" target="_blank" rel="noopener"> June 2017 </a><br>
+        {% endif %}
       </div>
     </div>
     <div class="col-md-4 col-sm-12">
       <div class="contactInfos">
-        <h2>Contact presse :</h2>
-        @ : press(at)lausanne2020(dot)com
+        {% if site.lang == "fr-fr" %}
+          <h2>Contact presse :</h2>
+          @ : press(at)lausanne2020(dot)com
+        {% endif %}
+        {% if site.lang == "de-de" %}
+          <h2>Pressekontakt</h2>
+          @ : press(at)lausanne2020(dot)com
+        {% endif %}
+        {% if site.lang == "en-gb" %}
+          <h2>Press contact</h2>
+          @ : press(at)lausanne2020(dot)com
+        {% endif %}
+        
       </div>
     </div>
   </div>
