--- a/medias.html
+++ b/medias.html
@@ -38,6 +38,26 @@ layout: default
           <a href="/images/home/Lausanne2020_Pressrelease_131stIOCSession_Lima_2017-13-09_ENG.pdf" target="_blank" rel="noopener">13.09.2017 : Lausanne 2020 - "Our promise becomes reality"</a><br>
         {% endif %}
       </div>
+      {% if site.lang == "fr-fr" %}
+        <h2>Articles de presse</h2>
+      {% endif %}
+      {% if site.lang == "de-de" %}
+        <h2>Presseartikel</h2>
+      {% endif %}
+      {% if site.lang == "en-gb" %}
+        <h2>Media articles</h2>
+      {% endif %}
+      <div class="medart">
+        {% if site.lang == "fr-fr" %}
+          <a href="https://www.sportcal.com/Insight/Opinion/118027" target="_blank" rel="noopener">25.05.2018 : Sportcal - "Pourquoi être hôte des Jeux Olympiques de la Jeunesse ?" (Texte en anglais) </a><br>
+        {% endif %}
+        {% if site.lang == "de-de" %}
+          <a href="https://www.sportcal.com/Insight/Opinion/118027" target="_blank" rel="noopener">25.05.2018 : Sportcal - "Why host the Youth Olympic Games?" (Artikel auf Englisch)</a><br>
+        {% endif %}
+        {% if site.lang == "en-gb" %}
+          <a href="https://www.sportcal.com/Insight/Opinion/118027" target="_blank" rel="noopener">25.05.2018 : Sportcal - "Why host the Youth Olympic Games?"</a><br>
+        {% endif %}
+      </div>
       <h2>Newsletter</h2>
       <div class="newsl">
         {% if site.lang == "fr-fr" %}
