--- a/medias.html
+++ b/medias.html
@@ -49,13 +49,13 @@ layout: default
       {% endif %}
       <div class="medart">
         {% if site.lang == "fr-fr" %}
-          <a href="https://www.sportcal.com/Insight/Opinion/118027" target="_blank" rel="noopener">25.05.2018 : Sportcal - "Pourquoi être hôte des Jeux Olympiques de la Jeunesse ?" (Texte en anglais) </a><br>
+          <a href="/images/home/Sportcal.pdf" target="_blank" rel="noopener">25.05.2018 : Sportcal - "Pourquoi être hôte des Jeux Olympiques de la Jeunesse ?" (Texte en anglais) </a><br>
         {% endif %}
         {% if site.lang == "de-de" %}
-          <a href="https://www.sportcal.com/Insight/Opinion/118027" target="_blank" rel="noopener">25.05.2018 : Sportcal - "Why host the Youth Olympic Games?" (Artikel auf Englisch)</a><br>
+          <a href="/images/home/Sportcal.pdf" target="_blank" rel="noopener">25.05.2018 : Sportcal - "Why host the Youth Olympic Games?" (Artikel auf Englisch)</a><br>
         {% endif %}
         {% if site.lang == "en-gb" %}
-          <a href="https://www.sportcal.com/Insight/Opinion/118027" target="_blank" rel="noopener">25.05.2018 : Sportcal - "Why host the Youth Olympic Games?"</a><br>
+          <a href="/images/home/Sportcal.pdf" target="_blank" rel="noopener">25.05.2018 : Sportcal - "Why host the Youth Olympic Games?"</a><br>
         {% endif %}
       </div>
       <h2>Newsletter</h2>
