--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@ layout: default
         </div>
         <form class="newsletter_cta_form form flex stretch" action="https://lausanne2020.us15.list-manage.com/subscribe/post?u=0fa74011acb0c15df90b53c26&amp;id=5f3f817214" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	    <div id="mc_embed_signup_scroll" class="newsletter-form-adress">
-	        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+	        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="{{ document.fragments.newsletter_email_placeholder.text }}" required>
 	    	<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 	    </div>
 	    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0fa74011acb0c15df90b53c26_5f3f817214" tabindex="-1" value=""></div>
-	    <div class="newsletter-form-button"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+	    <div class="newsletter-form-button"><input type="submit" value="{{ document.fragments.newsletter_submit_button.text }}" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
         </form>
     </div>
 </div>
