--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ layout: default
 	    	<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 	    </div>
 	    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0fa74011acb0c15df90b53c26_5f3f817214" tabindex="-1" value=""></div>
-	    <div class="newsletter-form-button"><input type="submit" value="{{ document.fragments.newsletter_submit_button.text }}" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+	    <div class="newsletter-form-button"><input type="submit" value="{{ document.fragments.newsletter_submit_button.text }}" name="subscribe" class="newsletter_cta_btn btn"></div>
         </form>
     </div>
 </div>
