--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,7 @@ layout: default
 
 <div class="faq">
     <div class="container">
+	<div class="faq_block">
 	<!-- Copyright 2018 Amber Creative Lab Ltd, CodyHouse.co -->
 	<div class="cd-faq-items">
 	    <ul id="basics" class="cd-faq-group">
@@ -24,6 +25,7 @@ layout: default
 			</div>
 		</li>
 	    </ul>
+	</div>
 	</div>
     </div>
 </div>
