--- a/faq.html
+++ b/faq.html
@@ -8,8 +8,16 @@ layout: default
     <div class="container">
 	<!-- Copyright 2018 Amber Creative Lab Ltd, CodyHouse.co -->
 	{% for post in document.fragments.questions.group_documents %}
-	    {{post.fragments.question.text}}
-	    {{post.fragments.answer.text}}
+	    <div class="cd-faq-items">
+		<ul id="basics" class="cd-faq-group">
+			<li>
+				<a class="cd-faq-trigger" href="#0">{{post.fragments.question.text}}</a>
+				<div class="cd-faq-content">
+					<p>{{post.fragments.answer.text}}</p>
+				</div>
+			</li>
+	    	</ul>
+	    </div>
 	{% endfor %}
     </div>
 </div>
