--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@ layout: default
 
 <div class="faq">
     <div class="container">
-	<h1>{{document.fragments.title.text}} - Test</h1>    
+	<h1>{{document.fragments.title.text}}</h1>    
 	<!-- Copyright 2018 Amber Creative Lab Ltd, CodyHouse.co -->
 	<section class="cd-faq">
 	    {% for post in document.fragments.questions.group_documents %}
