--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@ layout: default
   <div class="container fade-in-module">
     <h1>{{ about_data.singleevent }}</h1>
     <div class="singleevent_img">
-        <img src="/images/about/L2020_Swiss_Map.png" width="60%">
+        <img src="/images/about/VMP.jpg" width="60%">
     </div>
   </div>
 </div>
