--- a/about.html
+++ b/about.html
@@ -76,7 +76,11 @@ layout: default
   <div class="container fade-in-module">
     <h1>{{ about_data.singleevent }}</h1>
     <div class="singleevent_img">
-        <img src="/images/about/VMP.jpg" width="60%">
+        {% if site.lang == "fr-fr" %}
+          <img src="/images/about/VMP.jpg" width="60%">
+        {% else %}
+          <img src="/images/about/L2020_Swiss_Map.png" width="60%">
+        {% endif %}
     </div>
   </div>
 </div>
