--- a/about.html
+++ b/about.html
@@ -77,9 +77,7 @@ layout: default
     <h1>{{ about_data.singleevent }}</h1>
     <div class="singleevent_img">
         {% if site.lang == "fr-fr" %}
-          <a rel="noopener noreferrer" href="/images/about/VMP.pdf">
-            <img src="/images/about/VMP.jpg" width="60%">
-          </a>
+          <img src="/images/about/L2020_Map_FR.png" width="60%">
         {% else %}
           <img src="/images/about/L2020_Swiss_Map.png" width="60%">
         {% endif %}
