--- a/medias.html
+++ b/medias.html
@@ -26,6 +26,7 @@ layout: default
       {% endif %}
       <div class="prelease">
         {% if site.lang == "fr-fr" %}
+          <a href="/images/home/Lausanne2020_CP_15.08.2018.pdf" target="_blank" rel="noopener">15.08.2018 : Les sites hôtes en pleine confiance à 17 mois de l'évènement</a><br>
           <a href="/images/home/Lausanne2020.CP.09.04.2018._FR.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 en avance sur son calendrier</a><br>
           <a href="/images/home/Lausanne2020_Pressrelease_131stIOCSession_Lima_2017-13-09_FR.pdf" target="_blank" rel="noopener">13.09.2017 : Lausanne 2020 - "Nos promesses deviennent réalité"</a><br>
         {% endif %}
@@ -33,8 +34,6 @@ layout: default
           <a href="/images/home/Lausanne2020.CP.09.04.2018._ALL.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 liegt dem Zeitplan voraus</a><br>
         {% endif %}
         {% if site.lang == "en-gb" %}
-          <a href="/images/home/Lausanne2020.CP.09.04.2018._FR.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 en avance sur son calendrier</a><br>
-          <a href="/images/home/Lausanne2020.CP.09.04.2018._ALL.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 liegt dem Zeitplan voraus</a><br>
           <a href="/images/home/Lausanne2020_Pressrelease_131stIOCSession_Lima_2017-13-09_ENG.pdf" target="_blank" rel="noopener">13.09.2017 : Lausanne 2020 - "Our promise becomes reality"</a><br>
         {% endif %}
       </div>
