--- a/medias.html
+++ b/medias.html
@@ -48,12 +48,15 @@ layout: default
       {% endif %}
       <div class="medart">
         {% if site.lang == "fr-fr" %}
-          <a href="/images/home/Sportcal.pdf" target="_blank" rel="noopener">25.05.2018 : Sportcal - "Pourquoi être hôte des Jeux Olympiques de la Jeunesse ?" (Texte en anglais) </a><br>
+          <a href="https://www.vtg.admin.ch/fr/armee.detail.news.html/vtg-internet/verwaltung/2018/18-09/18-09-07-valleedejoux.html" target="_blank" rel="noopener">07.09.2018 : 21 ans. Chef de chantier. Sous-officier de milice.</a><br>
+          <a href="/images/home/Sportcal.pdf" target="_blank" rel="noopener">25.05.2018 : Sportcal - "Pourquoi être hôte des Jeux Olympiques de la Jeunesse ?" (Texte en anglais)</a><br>
         {% endif %}
         {% if site.lang == "de-de" %}
+          <a href="https://www.vtg.admin.ch/de/armee.detail.news.html/vtg-internet/verwaltung/2018/18-09/18-09-07-valleedejoux.html" target="_blank" rel="noopener">07.09.2018 : 21-jährig. Bauchef. Milizunteroffzier.</a><br>
           <a href="/images/home/Sportcal.pdf" target="_blank" rel="noopener">25.05.2018 : Sportcal - "Why host the Youth Olympic Games?" (Artikel auf Englisch)</a><br>
         {% endif %}
         {% if site.lang == "en-gb" %}
+          <a href="https://www.vtg.admin.ch/fr/armee.detail.news.html/vtg-internet/verwaltung/2018/18-09/18-09-07-valleedejoux.html" target="_blank" rel="noopener">07.09.2018 : 21 ans. Chef de chantier. Sous-officier de milice. (Text in french)</a><br>
           <a href="/images/home/Sportcal.pdf" target="_blank" rel="noopener">25.05.2018 : Sportcal - "Why host the Youth Olympic Games?"</a><br>
         {% endif %}
       </div>
