--- a/medias.html
+++ b/medias.html
@@ -31,6 +31,7 @@ layout: default
           <a href="/images/home/Lausanne2020_Pressrelease_131stIOCSession_Lima_2017-13-09_FR.pdf" target="_blank" rel="noopener">13.09.2017 : Lausanne 2020 - "Nos promesses deviennent réalité"</a><br>
         {% endif %}
         {% if site.lang == "de-de" %}
+          <a href="/images/home/Lausanne2020_MM_15.08.2018.pdf" target="_blank" rel="noopener">15.08.2018 : Host-Standorte sehr zuversichtlich 17 Monate vor den Spielen</a><br>
           <a href="/images/home/Lausanne2020.CP.09.04.2018._ALL.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 liegt dem Zeitplan voraus</a><br>
         {% endif %}
         {% if site.lang == "en-gb" %}
