--- a/medias.html
+++ b/medias.html
@@ -35,6 +35,7 @@ layout: default
           <a href="/images/home/Lausanne2020.CP.09.04.2018._ALL.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 liegt dem Zeitplan voraus</a><br>
         {% endif %}
         {% if site.lang == "en-gb" %}
+          <a href="/images/home/Lausanne2020_PR_15.08.2018.pdf" target="_blank" rel="noopener">15.08.2018 : Preparation Events to Take Place This Winter in Most Competition Sites</a><br>
           <a href="/images/home/Lausanne2020_Pressrelease_131stIOCSession_Lima_2017-13-09_ENG.pdf" target="_blank" rel="noopener">13.09.2017 : Lausanne 2020 - "Our promise becomes reality"</a><br>
         {% endif %}
       </div>
