--- a/medias.html
+++ b/medias.html
@@ -65,6 +65,7 @@ layout: default
       <h2>Newsletter</h2>
       <div class="newsl">
         {% if site.lang == "fr-fr" %}
+          <a href="https://mailchi.mp/lausanne2020/newsletter-septembre" target="_blank" rel="noopener"> Septembre 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-aout-2018" target="_blank" rel="noopener"> Août 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-juillet-2018" target="_blank" rel="noopener"> Juillet 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-lausanne-2020-juin-471637" target="_blank" rel="noopener"> Juin 2018 </a><br>
@@ -75,6 +76,7 @@ layout: default
           <a href="https://mailchi.mp/d1078c26c261/lausanne-2020-newsletter-8-juin-2017" target="_blank" rel="noopener"> Juin 2017 </a><br>
         {% endif %}
         {% if site.lang == "de-de" %}
+          <a href="https://mailchi.mp/lausanne2020/newsletter-september-de" target="_blank" rel="noopener"> September 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-august-2018" target="_blank" rel="noopener"> August 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-juli-2018" target="_blank" rel="noopener"> Juli 2018 </a><br>
           <a href="https://mailchi.mp/4953fb908b49/newsletter-lausanne-2020-juni-473997" target="_blank" rel="noopener"> Juni 2018 </a><br>
@@ -84,6 +86,7 @@ layout: default
           <a href="https://mailchi.mp/1b14eb75cf7e/lausanne-2020-newsletter-8-juni-2017" target="_blank" rel="noopener"> Juni 2017 </a><br>
         {% endif %}
         {% if site.lang == "en-gb" %}
+          <a href="https://mailchi.mp/lausanne2020.com/newsletter-september-en" target="_blank" rel="noopener"> September 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-august-2018-en" target="_blank" rel="noopener"> August 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-july-2018" target="_blank" rel="noopener"> July 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-lausanne-2020-june-471677" target="_blank" rel="noopener"> June 2018 </a><br>
