--- a/index.html
+++ b/index.html
@@ -116,8 +116,20 @@ layout: default
     </div>
     <img width="100%" src="/images/home/Benevoles.png">
 </div>	
+<div class="socials_left col-md-6 col-sm-12">
+    <h3>asdf</h3>
+    <h2>asdf</h2>
+    <p>
+	asdfasdf <br>	
+	asdfasdf
+    </p>
+    <a href=""><img src=""/></a>
+    <a href=""><img src=""/></a>
+    <a href=""><img src=""/></a>
+    <a href=""><img src=""/></a>
+</div>
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-<div class="newsletter_cta">
+<div class="newsletter_cta col-md-6 col-sm-12">
     <div class="container flex vcenter fade-in-module">
 	<div class="newsletter-text">
             <h1 class="h1_newsletter_cta">{{ document.fragments.newsletter_heading.text }}</h1>
