--- a/medias.html
+++ b/medias.html
@@ -65,7 +65,7 @@ layout: default
       <h2>Newsletter</h2>
       <div class="newsl">
         {% if site.lang == "fr-fr" %}
-          <a href="https://mailchi.mp/lausanne2020/newsletter-septembre" target="_blank" rel="noopener"> Septembre 2018 </a><br>
+          <a href="https://mailchi.mp/lausanne2020.com/newsletter-septembre-2018" target="_blank" rel="noopener"> Septembre 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-aout-2018" target="_blank" rel="noopener"> Août 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-juillet-2018" target="_blank" rel="noopener"> Juillet 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-lausanne-2020-juin-471637" target="_blank" rel="noopener"> Juin 2018 </a><br>
