--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ layout: default
 </div>
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 <div class="newsletter_cta col-md-6 col-sm-12">
-    <div class="container flex vcenter fade-in-module">
+    <div class="vcenter fade-in-module">
 	<div class="newsletter-text">
             <h1 class="h1_newsletter_cta">{{ document.fragments.newsletter_heading.text }}</h1>
         </div>
